Used open api for the api documentation